fixed images path

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
   <script defer src="main.js"></script>
 
   <link rel="icon" sizes="512x512" href="icons/android-chrome-icon-512x512.png">
-  <link rel="icon" sizes="192x192" href="icons/android-chrome-192x192.png">
-  <link rel="icon" sizes="144x144" href="icons/android-chrome-144x144.png">
+  <link rel="icon" sizes="192x192" href="icons/android-chrome-icon-192x192.png">
+  <link rel="icon" sizes="144x144" href="icons/android-chrome-icon-144x144.png">
 
-  <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon-180x180.png">
   <link rel="apple-touch-icon" sizes="152x152" href="icons/apple-touch-icon-152x152.png">
   <link rel="apple-touch-icon" sizes="120x120" href="icons/apple-touch-icon-120x120.png">
 
@@ -37,10 +37,10 @@
   <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
   <link rel="icon" type="image/x-icon" href="icons/favicon.ico">
 
-  <meta name="msapplication-TileImage" content="icons/mstile-144x144.png">
-  <meta name="msapplication-square150x150logo" content="icons/mstile-150x150.png">
-  <meta name="msapplication-wide310x150logo" content="icons/mstile-310x150.png">
-  <meta name="msapplication-square310x310logo" content="icons/mstile-310x310.png">
+  <meta name="msapplication-TileImage" content="icons/mstile-icon-144x144.png">
+  <meta name="msapplication-square150x150logo" content="icons/mstile-icon-150x150.png">
+  <meta name="msapplication-wide310x150logo" content="icons/mstile-icon-310x150.png">
+  <meta name="msapplication-square310x310logo" content="icons/mstile-icon-310x310.png">
   <meta name="msapplication-TileColor" content="#007bff">
 
   <meta name="theme-color" content="#007bff">
